# dynamodb-index-violation-detector

./: Cargo.toml  PRD.md  README.md
.claude/: settings.json
src/: assemble.rs  aws.rs  config.rs  domain.rs  export.rs  main.rs  rules.rs  scan.rs  state.rs  tui.rs
src/tui/: app.rs  completed.rs  inflight.rs  mod.rs  setup.rs
