[package]
name = "dynamodb-violation-detector"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
aws-config = "1.8.18"
aws-sdk-dynamodb = "1.116.0"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
ratatui = "0.30.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["test-util"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
